Add missing test cases for release rejection transaction