@@ -18,11 +18,13 @@
  */
 package co.rsk.peg;
 
+import static co.rsk.peg.BridgeEventsTestUtils.*;
+import static co.rsk.peg.BridgeStorageIndexKey.RELEASE_REQUEST_QUEUE_WITH_TXHASH;
 import static co.rsk.peg.BridgeSupport.BTC_TRANSACTION_CONFIRMATION_INCONSISTENT_BLOCK_ERROR_CODE;
-import static co.rsk.peg.BridgeSupportTestUtil.createRepository;
-import static co.rsk.peg.BridgeSupportTestUtil.mockChainOfStoredBlocks;
+import static co.rsk.peg.BridgeSupportTestUtil.*;
 import static co.rsk.peg.PegTestUtils.createUTXO;
 import static co.rsk.peg.bitcoin.BitcoinTestUtils.getBtcEcKeyFromSeed;
+import static co.rsk.peg.federation.FederationStorageIndexKey.NEW_FEDERATION_BTC_UTXOS_KEY;
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.lessThanOrEqualTo;
 import static org.hamcrest.core.Is.is;
@@ -69,7 +71,6 @@ import java.math.BigInteger;
 import java.time.Instant;
 import java.util.*;
 import java.util.function.Function;
-import java.util.stream.Collectors;
 import java.util.stream.Stream;
 import javax.annotation.Nullable;
 import org.bouncycastle.util.encoders.Hex;
@@ -91,66 +92,90 @@ import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 
 class BridgeSupportTest {
-    private final BridgeConstants bridgeConstantsRegtest = new BridgeRegTestConstants();
-    private final BridgeConstants bridgeMainNetConstants = BridgeMainNetConstants.getInstance();
-    private final FederationConstants federationConstantsRegtest = bridgeConstantsRegtest.getFederationConstants();
-    private final FederationConstants federationConstantsMainnet = bridgeMainNetConstants.getFederationConstants();
-
-    private final NetworkParameters btcRegTestParams = bridgeConstantsRegtest.getBtcParams();
-    private final NetworkParameters btcMainnetParams = bridgeMainNetConstants.getBtcParams();
-
-    private final BridgeSupportBuilder bridgeSupportBuilder = BridgeSupportBuilder.builder();
-    private final FederationSupportBuilder federationSupportBuilder = FederationSupportBuilder.builder();
-
-    private WhitelistStorageProvider whitelistStorageProvider;
-    private WhitelistSupport whitelistSupport;
-    private LockingCapSupport lockingCapSupport;
-    private FederationSupport federationSupport;
-    private FeePerKbSupport feePerKbSupport;
-
     private static final String TO_ADDRESS = "0000000000000000000000000000000000000006";
     private static final BigInteger DUST_AMOUNT = new BigInteger("1");
     private static final BigInteger NONCE = new BigInteger("0");
     private static final BigInteger GAS_PRICE = new BigInteger("100");
     private static final BigInteger GAS_LIMIT = new BigInteger("1000");
     private static final String DATA = "80af2871";
+    private static final Transaction tx = Transaction
+        .builder()
+        .nonce(NONCE)
+        .gasPrice(GAS_PRICE)
+        .gasLimit(GAS_LIMIT)
+        .destination(Hex.decode(TO_ADDRESS))
+        .data(Hex.decode(DATA))
+        .chainId(Constants.MAINNET_CHAIN_ID)
+        .value(DUST_AMOUNT)
+        .build();
+    private static final ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
     private static final co.rsk.core.Coin LIMIT_MONETARY_BASE = new co.rsk.core.Coin(new BigInteger("21000000000000000000000000"));
     private static final RskAddress contractAddress = PrecompiledContracts.BRIDGE_ADDR;
 
-    private ActivationConfig.ForBlock activationsBeforeForks;
-    private ActivationConfig.ForBlock activationsAfterForks;
+    private static final ActivationConfig.ForBlock genesisActivations = ActivationConfigsForTest.genesis().forBlock(0);
+    private static final ActivationConfig.ForBlock allActivations = ActivationConfigsForTest.all().forBlock(0);
+    private static final Federation activeFederation = P2shErpFederationBuilder.builder().build();
 
+    private final BridgeConstants bridgeConstantsRegtest = new BridgeRegTestConstants();
+    private final NetworkParameters btcRegTestParams = bridgeConstantsRegtest.getBtcParams();
+    private final FederationConstants federationConstantsRegtest = bridgeConstantsRegtest.getFederationConstants();
+
+    private final BridgeConstants bridgeMainNetConstants = BridgeMainNetConstants.getInstance();
+    private final NetworkParameters btcMainnetParams = bridgeMainNetConstants.getBtcParams();
+    private final FederationConstants federationConstantsMainnet = bridgeMainNetConstants.getFederationConstants();
+    private final LockingCapConstants lockingCapMainnetConstants = bridgeMainNetConstants.getLockingCapConstants();
+
+    private final BridgeSupportBuilder bridgeSupportBuilder = BridgeSupportBuilder.builder();
+    private final FederationSupportBuilder federationSupportBuilder = FederationSupportBuilder.builder();
+    private final int pegoutTxIndexActivationHeight = bridgeMainNetConstants.getBtcHeightWhenPegoutTxIndexActivates() + bridgeMainNetConstants.getPegoutTxIndexGracePeriodInBtcBlocks();
+
+    private Repository repository;
+    private BridgeStorageProvider bridgeStorageProvider;
+    private WhitelistStorageProvider whitelistStorageProvider;
+    private WhitelistSupport whitelistSupport;
+    private LockingCapSupport lockingCapSupport;
+    private StorageAccessor bridgeStorageAccessor;
+    private FederationStorageProvider federationStorageProvider;
+    private FederationSupport federationSupport;
+    private FeePerKbSupport feePerKbSupport;
     private SignatureCache signatureCache;
+    private PartialMerkleTree pmtWithTransactions;
+    private BtcBlockStoreWithCache.Factory btcBlockStoreFactory;
+    private BridgeSupport bridgeSupport;
 
     @BeforeEach
     void setUpOnEachTest() {
-        activationsBeforeForks = ActivationConfigsForTest.genesis().forBlock(0);
-        activationsAfterForks = ActivationConfigsForTest.all().forBlock(0);
         signatureCache = new BlockTxSignatureCache(new ReceivedTxSignatureCache());
+        tx.sign(senderKey.getPrivKeyBytes());
 
-        StorageAccessor bridgeStorageAccessor = new InMemoryStorage();
-        FederationStorageProvider federationStorageProvider = new FederationStorageProviderImpl(bridgeStorageAccessor);
+        bridgeStorageAccessor = new InMemoryStorage();
+        federationStorageProvider = new FederationStorageProviderImpl(bridgeStorageAccessor);
         whitelistStorageProvider = new WhitelistStorageProviderImpl(bridgeStorageAccessor);
         LockingCapStorageProvider lockingCapStorageProvider = new LockingCapStorageProviderImpl(bridgeStorageAccessor);
 
         feePerKbSupport = mock(FeePerKbSupport.class);
+        Coin feePerKb = Coin.valueOf(1000L);
+        when(feePerKbSupport.getFeePerKb()).thenReturn(feePerKb);
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsMainnet)
             .withFederationStorageProvider(federationStorageProvider)
-            .withActivations(activationsAfterForks)
+            .withActivations(allActivations)
             .build();
         whitelistSupport = new WhitelistSupportImpl(
             WhitelistMainNetConstants.getInstance(),
             whitelistStorageProvider,
-            activationsAfterForks,
+            allActivations,
             signatureCache
         );
         lockingCapSupport = new LockingCapSupportImpl(
             lockingCapStorageProvider,
-            activationsAfterForks,
-            LockingCapMainNetConstants.getInstance(),
+            allActivations,
+            lockingCapMainnetConstants,
             signatureCache
         );
+
+        repository = createRepository();
+        bridgeStorageProvider = new BridgeStorageProvider(repository, contractAddress, btcMainnetParams, allActivations);
     }
 
     @Test
@@ -316,9 +341,9 @@ class BridgeSupportTest {
             federationSupport = mock(FederationSupportImpl.class);
 
             bridgeSupport = bridgeSupportBuilder
-            .withBridgeConstants(bridgeMainnetConstants)
-            .withFederationSupport(federationSupport)
-            .build();
+                .withBridgeConstants(bridgeMainnetConstants)
+                .withFederationSupport(federationSupport)
+                .build();
         }
 
         @Test
@@ -580,7 +605,7 @@ class BridgeSupportTest {
         void getProposedFederatorPublicKeyOfType_whenProposedFederationExists_shouldReturnExpectedPublicKey(FederationMember.KeyType keyType) {
             var index = 0;
             var member = federation.getMembers().get(index);
-            
+
             // Set up public keys based on the keyType
             byte[] expectedPublicKey;
             switch (keyType) {
@@ -603,7 +628,9 @@ class BridgeSupportTest {
                     throw new IllegalArgumentException("Unknown KeyType");
             }
 
-            assertArrayEquals(expectedPublicKey, bridgeSupport.getProposedFederatorPublicKeyOfType(index, keyType).get());
+            Optional<byte[]> key = bridgeSupport.getProposedFederatorPublicKeyOfType(index, keyType);
+            assertTrue(key.isPresent());
+            assertArrayEquals(expectedPublicKey, key.get());
         }
 
         @Test
@@ -1503,7 +1530,7 @@ class BridgeSupportTest {
         Federation retiringFederation = FederationFactory.buildStandardMultiSigFederation(retiringFederationArgs);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
 
@@ -1601,7 +1628,7 @@ class BridgeSupportTest {
         assertEquals(0, repository.getBalance(srcKey1RskAddress).asBigInteger().intValue());
         assertEquals(0, repository.getBalance(srcKey2RskAddress).asBigInteger().intValue());
         assertEquals(0, repository.getBalance(srcKey3RskAddress).asBigInteger().intValue());
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
 
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcParams, activations).size());
         assertEquals(0, federationStorageProvider.getOldFederationBtcUTXOs().size());
@@ -1614,7 +1641,7 @@ class BridgeSupportTest {
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
             .sorted(Comparator.comparing(BtcTransaction::getOutputSum))
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -1632,7 +1659,7 @@ class BridgeSupportTest {
         assertThat(Coin.COIN.multiply(7).subtract(pegoutBtcTx.getOutput(0).getValue()), is(lessThanOrEqualTo(Coin.MILLICOIN)));
         assertEquals(srcKey3.toAddress(btcRegTestParams), pegoutBtcTx.getOutput(0).getAddressFromP2PKHScript(btcRegTestParams));
         assertEquals(2, pegoutBtcTx.getInputs().size());
-        List<TransactionOutPoint> releaseOutpoints = pegoutBtcTx.getInputs().stream().map(TransactionInput::getOutpoint).sorted(Comparator.comparing(TransactionOutPoint::getIndex)).collect(Collectors.toList());
+        List<TransactionOutPoint> releaseOutpoints = pegoutBtcTx.getInputs().stream().map(TransactionInput::getOutpoint).sorted(Comparator.comparing(TransactionOutPoint::getIndex)).toList();
         assertEquals(tx3.getHash(), releaseOutpoints.get(0).getHash());
         assertEquals(tx3.getHash(), releaseOutpoints.get(1).getHash());
         assertEquals(0, releaseOutpoints.get(0).getIndex());
@@ -1690,7 +1717,7 @@ class BridgeSupportTest {
         Federation federation2 = FederationFactory.buildStandardMultiSigFederation(federation2Args);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -1788,7 +1815,7 @@ class BridgeSupportTest {
         assertEquals(0, repository.getBalance(srcKey1RskAddress).asBigInteger().intValue());
         assertEquals(0, repository.getBalance(srcKey2RskAddress).asBigInteger().intValue());
         assertEquals(0, repository.getBalance(srcKey3RskAddress).asBigInteger().intValue());
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
 
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, federationStorageProvider.getOldFederationBtcUTXOs().size());
@@ -1801,7 +1828,7 @@ class BridgeSupportTest {
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
             .sorted(Comparator.comparing(BtcTransaction::getOutputSum))
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -1825,7 +1852,7 @@ class BridgeSupportTest {
         assertThat(Coin.COIN.multiply(7).subtract(pegoutBtcTx.getOutput(0).getValue()), is(lessThanOrEqualTo(Coin.MILLICOIN)));
         assertEquals(srcKey3.toAddress(btcRegTestParams), pegoutBtcTx.getOutput(0).getAddressFromP2PKHScript(btcRegTestParams));
         assertEquals(2, pegoutBtcTx.getInputs().size());
-        List<TransactionOutPoint> releaseOutpoints = pegoutBtcTx.getInputs().stream().map(TransactionInput::getOutpoint).sorted(Comparator.comparing(TransactionOutPoint::getIndex)).collect(Collectors.toList());
+        List<TransactionOutPoint> releaseOutpoints = pegoutBtcTx.getInputs().stream().map(TransactionInput::getOutpoint).sorted(Comparator.comparing(TransactionOutPoint::getIndex)).toList();
         assertEquals(tx3.getHash(), releaseOutpoints.get(0).getHash());
         assertEquals(tx3.getHash(), releaseOutpoints.get(1).getHash());
         assertEquals(0, releaseOutpoints.get(0).getIndex());
@@ -1920,7 +1947,7 @@ class BridgeSupportTest {
         when(federationStorageProviderMock.getNewFederation(any(), any())).thenReturn(fed);
         when(provider.getCoinbaseInformation(registerHeader.getHash())).thenReturn(new CoinbaseInformation(witnessMerkleRoot));
         WhitelistStorageProvider whitelistProvider = mock(WhitelistStorageProvider.class);
-        when(whitelistProvider.getLockWhitelist(activationsBeforeForks, btcRegTestParams)).thenReturn(new LockWhitelist(new HashMap<>(), 0));
+        when(whitelistProvider.getLockWhitelist(genesisActivations, btcRegTestParams)).thenReturn(new LockWhitelist(new HashMap<>(), 0));
         LockingCapSupport lockingCapSupportMock = mock(LockingCapSupport.class);
         when(lockingCapSupportMock.getLockingCap()).thenReturn(Optional.of(Coin.FIFTY_COINS));
         // mock an actual store for the processed txs
@@ -2016,19 +2043,6 @@ class BridgeSupportTest {
         BlockGenerator blockGenerator = new BlockGenerator();
         // Old federation will be in migration age at block 18500 since we are using mainnet constants
         org.ethereum.core.Block rskCurrentBlock = blockGenerator.createBlock(18510, 1);
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
 
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsRegtest)
@@ -2089,17 +2103,6 @@ class BridgeSupportTest {
         BlockGenerator blockGenerator = new BlockGenerator();
         // Old federation will be in migration age at block 18500 since we are using mainnet constants
         org.ethereum.core.Block rskCurrentBlock = blockGenerator.createBlock(18510, 1);
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        tx.sign(new ECKey().getPrivKeyBytes());
 
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsRegtest)
@@ -2166,18 +2169,6 @@ class BridgeSupportTest {
         BlockGenerator blockGenerator = new BlockGenerator();
         // Old federation will be in migration age at block 18500 since we are using mainnet constants
         org.ethereum.core.Block rskCurrentBlock = blockGenerator.createBlock(18510, 1);
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
 
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsRegtest)
@@ -2238,19 +2229,6 @@ class BridgeSupportTest {
         BlockGenerator blockGenerator = new BlockGenerator();
         // Old federation will be in migration age at block 18500 since we are using mainnet constants
         org.ethereum.core.Block rskCurrentBlock = blockGenerator.createBlock(18510, 1);
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
 
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsRegtest)
@@ -2321,19 +2299,6 @@ class BridgeSupportTest {
         BlockGenerator blockGenerator = new BlockGenerator();
         // Old federation will be in migration age at block 18500 since we are using mainnet constants
         org.ethereum.core.Block rskCurrentBlock = blockGenerator.createBlock(18510, 1);
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
 
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsRegtest)
@@ -2394,16 +2359,6 @@ class BridgeSupportTest {
         BlockGenerator blockGenerator = new BlockGenerator();
         // Old federation will be in migration age at block 18500 since we are using mainnet constants
         org.ethereum.core.Block rskCurrentBlock = blockGenerator.createBlock(18510, 1);
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
 
         federationSupport = federationSupportBuilder
             .withFederationConstants(federationConstantsRegtest)
@@ -2421,9 +2376,6 @@ class BridgeSupportTest {
             .withFederationSupport(federationSupport)
             .withFeePerKbSupport(feePerKbSupport)
             .build();
-
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
 
         List<UTXO> sufficientUTXOsForMigration1 = new ArrayList<>();
         sufficientUTXOsForMigration1.add(createUTXO(Coin.COIN, oldFederation.getAddress()));
@@ -2479,19 +2431,6 @@ class BridgeSupportTest {
             .withActivations(activations)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         assertEquals(btcTx, provider.getPegoutsWaitingForSignatures().get(tx.getHash()));
@@ -2534,19 +2473,6 @@ class BridgeSupportTest {
             .withEventLogger(eventLogger)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         verify(eventLogger, times(1)).logPegoutConfirmed(btcTx.getHash(), rskBlockNumber);
@@ -2589,19 +2515,6 @@ class BridgeSupportTest {
             .withEventLogger(eventLogger)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         verify(eventLogger, times(0)).logPegoutConfirmed(btcTx.getHash(), rskBlockNumber);
@@ -2641,19 +2554,6 @@ class BridgeSupportTest {
             .withEventLogger(eventLogger)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         verify(eventLogger, times(0)).logPegoutConfirmed(btcTx.getHash(), 1L);
@@ -2691,19 +2591,6 @@ class BridgeSupportTest {
             .withActivations(activations)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         assertEquals(btcTx, provider.getPegoutsWaitingForSignatures().get(tx.getHash()));
@@ -2743,19 +2630,6 @@ class BridgeSupportTest {
             .withActivations(activations)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         assertEquals(btcTx, provider.getPegoutsWaitingForSignatures().get(rskTxHash));
@@ -2796,19 +2670,6 @@ class BridgeSupportTest {
             .withActivations(activations)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         assertEquals(btcTx, provider.getPegoutsWaitingForSignatures().get(tx.getHash()));
@@ -2882,19 +2743,6 @@ class BridgeSupportTest {
             .withFederationSupport(federationSupport)
             .withFeePerKbSupport(feePerKbSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         // Assert two transactions are added to pegoutsWaitingForConfirmations, one pegout batch and one migration tx
@@ -2936,18 +2784,6 @@ class BridgeSupportTest {
             .withActivations(fingerrootActivations)
             .withFeePerKbSupport(feePerKbSupport)
             .build();
-
-        tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         // Get the transaction that was confirmed and the one that stayed unconfirmed
@@ -3006,18 +2842,6 @@ class BridgeSupportTest {
             .withFeePerKbSupport(feePerKbSupport)
             .build();
 
-        tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        tx.sign(senderKey.getPrivKeyBytes());
-
         bridgeSupport.updateCollections(tx);
 
         assertEquals(0, pegoutsWaitingForConfirmations.getEntries().size());
@@ -3058,19 +2882,6 @@ class BridgeSupportTest {
             .withActivations(activations)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
         bridgeSupport.updateCollections(tx);
 
         assertNull(provider.getPegoutsWaitingForSignatures().get(tx.getHash()));
@@ -3110,20 +2921,6 @@ class BridgeSupportTest {
             .withActivations(activations)
             .withFederationSupport(federationSupport)
             .build();
-
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
 
         TreeMap<Keccak256, BtcTransaction> txsWaitingForSignatures = new TreeMap<>();
         BtcTransaction existingBtcTxEntryValue = mock(BtcTransaction.class);
@@ -3181,19 +2978,6 @@ class BridgeSupportTest {
             .withFederationSupport(federationSupport)
             .build();
 
-        Transaction tx = Transaction
-            .builder()
-            .nonce(NONCE)
-            .gasPrice(GAS_PRICE)
-            .gasLimit(GAS_LIMIT)
-            .destination(Hex.decode(TO_ADDRESS))
-            .data(Hex.decode(DATA))
-            .chainId(Constants.REGTEST_CHAIN_ID)
-            .value(DUST_AMOUNT)
-            .build();
-        ECKey senderKey = RskTestUtils.getEcKeyFromSeed("sender");
-        tx.sign(senderKey.getPrivKeyBytes());
-
         assertThrows(IllegalStateException.class, () -> bridgeSupport.updateCollections(tx));
     }
 
@@ -3205,7 +2989,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3282,7 +3066,7 @@ class BridgeSupportTest {
         );
 
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(0, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -3299,7 +3083,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3380,7 +3164,7 @@ class BridgeSupportTest {
 
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
         assertEquals(totalAmountExpectedToHaveBeenLocked, repository.getBalance(rskDestinationAddress));
-        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(contractAddress));
         assertEquals(1, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(amountToLock, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).get(0).getValue());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
@@ -3397,7 +3181,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3478,7 +3262,7 @@ class BridgeSupportTest {
 
         assertThat(whitelist.isWhitelisted(btcAddress), is(false));
         assertEquals(totalAmountExpectedToHaveBeenLocked, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(contractAddress));
         assertEquals(1, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(amountToLock, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).get(0).getValue());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
@@ -3495,7 +3279,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3575,7 +3359,7 @@ class BridgeSupportTest {
 
         assertThat(whitelist.isWhitelisted(btcAddress), is(false));
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(1, provider.getPegoutsWaitingForConfirmations().getEntries().size());
 
@@ -3583,7 +3367,7 @@ class BridgeSupportTest {
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
             .sorted(Comparator.comparing(BtcTransaction::getOutputSum))
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -3605,7 +3389,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3627,7 +3411,7 @@ class BridgeSupportTest {
         federationStorageProvider.setNewFederation(federation1);
 
         //Whitelist the address
-        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(activationsBeforeForks, btcRegTestParams);
+        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(genesisActivations, btcRegTestParams);
         whitelist.put(btcAddress, new OneOffWhiteListEntry(btcAddress, Coin.COIN.multiply(5)));
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
@@ -3684,7 +3468,7 @@ class BridgeSupportTest {
 
         assertThat(whitelist.isWhitelisted(btcAddress), is(false));
         assertEquals(totalAmountExpectedToHaveBeenLocked, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(contractAddress));
         assertEquals(1, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(Coin.COIN.multiply(5), federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).get(0).getValue());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
@@ -3701,7 +3485,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3772,7 +3556,7 @@ class BridgeSupportTest {
         bridgeSupport.registerBtcTransaction(mock(Transaction.class), tx1.bitcoinSerialize(), height, pmt.bitcoinSerialize());
 
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(0, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -3788,7 +3572,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3811,7 +3595,7 @@ class BridgeSupportTest {
         federationStorageProvider.setNewFederation(federation1);
 
         // Whitelist the address
-        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(activationsBeforeForks, btcRegTestParams);
+        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(genesisActivations, btcRegTestParams);
         whitelist.put(btcAddress, new OneOffWhiteListEntry(btcAddress, amountToLock));
 
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
@@ -3873,7 +3657,7 @@ class BridgeSupportTest {
 
         assertThat(whitelist.isWhitelisted(btcAddress), is(false));
         assertEquals(totalAmountExpectedToHaveBeenLocked, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(contractAddress));
         assertEquals(1, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(amountToLock, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).get(0).getValue());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
@@ -3890,7 +3674,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -3975,7 +3759,7 @@ class BridgeSupportTest {
         );
 
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(1, provider.getPegoutsWaitingForConfirmations().getEntries().size());
 
@@ -3983,7 +3767,7 @@ class BridgeSupportTest {
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
             .sorted(Comparator.comparing(BtcTransaction::getOutputSum))
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -4005,7 +3789,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -4077,7 +3861,7 @@ class BridgeSupportTest {
         bridgeSupport.registerBtcTransaction(mock(Transaction.class), tx1.bitcoinSerialize(), height, pmt.bitcoinSerialize());
 
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(0, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -4093,7 +3877,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -4166,7 +3950,7 @@ class BridgeSupportTest {
 
         bridgeSupport.registerBtcTransaction(mock(Transaction.class), tx1.bitcoinSerialize(), height, pmt.bitcoinSerialize());
 
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(1, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -4174,7 +3958,7 @@ class BridgeSupportTest {
         List<BtcTransaction> pegoutBtcTxs = provider.getPegoutsWaitingForConfirmations().getEntries()
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -4196,7 +3980,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -4268,7 +4052,7 @@ class BridgeSupportTest {
         bridgeSupport.registerBtcTransaction(mock(Transaction.class), tx1.bitcoinSerialize(), height, pmt.bitcoinSerialize());
 
         assertEquals(co.rsk.core.Coin.ZERO, repository.getBalance(rskAddress));
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(0, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -4284,7 +4068,7 @@ class BridgeSupportTest {
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
 
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         Block executionBlock = mock(Block.class);
         when(executionBlock.getNumber()).thenReturn(10L);
@@ -4366,7 +4150,7 @@ class BridgeSupportTest {
             pmt.bitcoinSerialize()
         );
 
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(1, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -4374,7 +4158,7 @@ class BridgeSupportTest {
         List<BtcTransaction> pegoutBtcTxs = provider.getPegoutsWaitingForConfirmations().getEntries()
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -4538,7 +4322,7 @@ class BridgeSupportTest {
         federationStorageProvider.setNewFederation(federation1);
 
         // Whitelist the address
-        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(activationsBeforeForks, btcRegTestParams);
+        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(genesisActivations, btcRegTestParams);
         whitelist.put(btcAddress, new OneOffWhiteListEntry(btcAddress, Coin.COIN.multiply(10)));
 
         federationSupport = federationSupportBuilder
@@ -4919,7 +4703,7 @@ class BridgeSupportTest {
         federationStorageProvider.setNewFederation(federation1);
 
         // Whitelist the address
-        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(activationsBeforeForks, btcRegTestParams);
+        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(genesisActivations, btcRegTestParams);
         whitelist.put(btcAddress, new OneOffWhiteListEntry(btcAddress, Coin.COIN.multiply(10)));
 
         federationSupport = federationSupportBuilder
@@ -4963,7 +4747,7 @@ class BridgeSupportTest {
 
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         BtcECKey srcKey1 = new BtcECKey();
         ECKey key = ECKey.fromPublicOnly(srcKey1.getPubKey());
@@ -5143,7 +4927,7 @@ class BridgeSupportTest {
         federationStorageProvider.setNewFederation(federation1);
 
         // Whitelist the address
-        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(activationsBeforeForks, btcRegTestParams);
+        LockWhitelist whitelist = whitelistStorageProvider.getLockWhitelist(genesisActivations, btcRegTestParams);
         whitelist.put(btcAddressFromBtcLockSender, new OneOffWhiteListEntry(btcAddressFromBtcLockSender, amountToLock));
 
         BtcLockSenderProvider btcLockSenderProvider = getBtcLockSenderProvider(
@@ -5200,7 +4984,7 @@ class BridgeSupportTest {
 
         Federation federation1 = PegTestUtils.createSimpleActiveFederation(bridgeConstantsRegtest);
         Repository repository = createRepository();
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, LIMIT_MONETARY_BASE);
+        repository.addBalance(contractAddress, LIMIT_MONETARY_BASE);
 
         BtcECKey srcKey1 = new BtcECKey();
         ECKey key = ECKey.fromPublicOnly(srcKey1.getPubKey());
@@ -5310,7 +5094,7 @@ class BridgeSupportTest {
         );
 
         // Assert
-        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(LIMIT_MONETARY_BASE, repository.getBalance(contractAddress));
         assertEquals(0, federationStorageProvider.getNewFederationBtcUTXOs(btcRegTestParams, activations).size());
         assertEquals(0, provider.getReleaseRequestQueue().getEntries().size());
         assertEquals(1, provider.getPegoutsWaitingForConfirmations().getEntries().size());
@@ -5318,7 +5102,7 @@ class BridgeSupportTest {
         List<BtcTransaction> pegoutBtcTxs = provider.getPegoutsWaitingForConfirmations().getEntries()
             .stream()
             .map(PegoutsWaitingForConfirmations.Entry::getBtcTransaction)
-            .collect(Collectors.toList());
+            .toList();
 
         // First release tx should correspond to the 5 BTC lock tx
         BtcTransaction pegoutBtcTx = pegoutBtcTxs.get(0);
@@ -5581,7 +5365,7 @@ class BridgeSupportTest {
 
         BridgeStorageProvider provider = spy(new BridgeStorageProvider(
             repository,
-            PrecompiledContracts.BRIDGE_ADDR,
+            contractAddress,
             bridgeConstantsRegtest.getBtcParams(),
             activations
         ));
@@ -5660,7 +5444,7 @@ class BridgeSupportTest {
 
         BridgeStorageProvider provider = spy(new BridgeStorageProvider(
             repository,
-            PrecompiledContracts.BRIDGE_ADDR,
+            contractAddress,
             bridgeConstantsRegtest.getBtcParams(),
             activations)
         );
@@ -5740,7 +5524,7 @@ class BridgeSupportTest {
         BtcBlockStoreWithCache.Factory mockFactory = mock(BtcBlockStoreWithCache.Factory.class);
         when(mockFactory.newInstance(any(), any(), any(), any())).thenReturn(btcBlockStore);
 
-        BridgeStorageProvider provider = spy(new BridgeStorageProvider(repository, PrecompiledContracts.BRIDGE_ADDR, bridgeConstantsRegtest.getBtcParams(),
+        BridgeStorageProvider provider = spy(new BridgeStorageProvider(repository, contractAddress, bridgeConstantsRegtest.getBtcParams(),
             activations));
 
         BridgeSupport bridgeSupport = getBridgeSupport(
@@ -5800,7 +5584,7 @@ class BridgeSupportTest {
 
         BridgeStorageProvider provider = spy(new BridgeStorageProvider(
             repository,
-            PrecompiledContracts.BRIDGE_ADDR,
+            contractAddress,
             bridgeConstantsRegtest.getBtcParams(),
             activations)
         );
@@ -5871,7 +5655,7 @@ class BridgeSupportTest {
 
         BridgeStorageProvider provider = spy(new BridgeStorageProvider(
             repository,
-            PrecompiledContracts.BRIDGE_ADDR,
+            contractAddress,
             bridgeConstantsRegtest.getBtcParams(),
             activations)
         );
@@ -6302,7 +6086,7 @@ class BridgeSupportTest {
         byte[] witnessReservedValue = tx1.getWitness(0).getPush(0);
         Sha256Hash witnessRoot = MerkleTreeUtils.combineLeftRight(Sha256Hash.ZERO_HASH, secondHashTx);
         byte[] witnessRootBytes = witnessRoot.getReversedBytes();
-        byte[] wc = tx1.getOutputs().stream().filter(t -> t.getValue().getValue() == 0).collect(Collectors.toList()).get(0).getScriptPubKey().getChunks().get(1).data;
+        byte[] wc = tx1.getOutputs().stream().filter(t -> t.getValue().getValue() == 0).toList().get(0).getScriptPubKey().getChunks().get(1).data;
         wc = Arrays.copyOfRange(wc, 4, 36);
         Sha256Hash witCom = Sha256Hash.wrap(wc);
 
@@ -6372,7 +6156,7 @@ class BridgeSupportTest {
         when(activations.isActive(ConsensusRule.RSKIP143)).thenReturn(false);
 
         Repository repository = createRepository();
-        BridgeStorageProvider provider = new BridgeStorageProvider(repository, PrecompiledContracts.BRIDGE_ADDR, bridgeConstantsRegtest.getBtcParams(), activations);
+        BridgeStorageProvider provider = new BridgeStorageProvider(repository, contractAddress, bridgeConstantsRegtest.getBtcParams(), activations);
 
         BridgeSupport bridgeSupport = getBridgeSupport(
             bridgeConstantsRegtest,
@@ -6397,7 +6181,7 @@ class BridgeSupportTest {
         when(activations.isActive(ConsensusRule.RSKIP143)).thenReturn(true);
 
         Repository repository = createRepository();
-        BridgeStorageProvider provider = new BridgeStorageProvider(repository, PrecompiledContracts.BRIDGE_ADDR, bridgeConstantsRegtest.getBtcParams(), activations);
+        BridgeStorageProvider provider = new BridgeStorageProvider(repository, contractAddress, bridgeConstantsRegtest.getBtcParams(), activations);
 
         BridgeSupport bridgeSupport = getBridgeSupport(
             bridgeConstantsRegtest,
@@ -6443,7 +6227,7 @@ class BridgeSupportTest {
     void isAlreadyBtcTxHashProcessedHeight_true() throws IOException {
         Repository repository = createRepository();
         BtcTransaction btcTransaction = new BtcTransaction(btcRegTestParams);
-        BridgeStorageProvider provider = new BridgeStorageProvider(repository, PrecompiledContracts.BRIDGE_ADDR, bridgeConstantsRegtest.getBtcParams(), activationsBeforeForks);
+        BridgeStorageProvider provider = new BridgeStorageProvider(repository, contractAddress, bridgeConstantsRegtest.getBtcParams(), genesisActivations);
 
         provider.setHeightBtcTxhashAlreadyProcessed(btcTransaction.getHash(), 1L);
         BridgeSupport bridgeSupport = bridgeSupportBuilder
@@ -6466,7 +6250,7 @@ class BridgeSupportTest {
     void validationsForRegisterBtcTransaction_negative_height() throws BlockStoreException, BridgeIllegalArgumentException {
         BtcTransaction tx = new BtcTransaction(btcRegTestParams);
         Repository repository = createRepository();
-        BridgeStorageProvider provider = new BridgeStorageProvider(repository, PrecompiledContracts.BRIDGE_ADDR, bridgeConstantsRegtest.getBtcParams(), activationsBeforeForks);
+        BridgeStorageProvider provider = new BridgeStorageProvider(repository, contractAddress, bridgeConstantsRegtest.getBtcParams(), genesisActivations);
         BridgeSupport bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeConstantsRegtest)
             .withProvider(provider)
@@ -6484,9 +6268,9 @@ class BridgeSupportTest {
         Repository repository = createRepository();
         BridgeStorageProvider provider = new BridgeStorageProvider(
             repository,
-            PrecompiledContracts.BRIDGE_ADDR,
+            contractAddress,
             bridgeConstantsRegtest.getBtcParams(),
-            activationsBeforeForks
+            genesisActivations
         );
         BridgeSupport bridgeSupport = bridgeSupportBuilder
             .withBridgeConstants(bridgeConstantsRegtest)
@@ -7034,7 +6818,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7043,7 +6827,7 @@ class BridgeSupportTest {
             btcBlockStore,
             provider,
             storedBlock,
-            activationsBeforeForks
+            genesisActivations
         );
 
         StoredBlock storedBlock2 = mock(StoredBlock.class);
@@ -7072,7 +6856,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7082,7 +6866,7 @@ class BridgeSupportTest {
             provider,
             storedBlock,
             executionBlockMock,
-            activationsAfterForks
+            allActivations
         );
 
         long timeStampOld = executionBlockMock.getTimestamp() - (bridgeConstantsRegtest.getMinSecondsBetweenCallsToReceiveHeader() * 2L);
@@ -7113,7 +6897,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7123,7 +6907,7 @@ class BridgeSupportTest {
             provider,
             storedBlock,
             executionBlockMock,
-            activationsAfterForks
+            allActivations
         );
 
         long timeStampOld = executionBlockMock.getTimestamp() - (bridgeConstantsRegtest.getMinSecondsBetweenCallsToReceiveHeader() / 2L);
@@ -7151,7 +6935,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7160,7 +6944,7 @@ class BridgeSupportTest {
             btcBlockStore,
             provider,
             storedBlock,
-            activationsAfterForks
+            allActivations
         );
 
         int result = bridgeSupport.receiveHeader(btcBlock2);
@@ -7185,7 +6969,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7194,7 +6978,7 @@ class BridgeSupportTest {
             btcBlockStore,
             provider,
             storedBlock,
-            activationsAfterForks
+            allActivations
         );
 
         when(btcBlockStore.get(any())).thenReturn(null);
@@ -7222,7 +7006,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7231,7 +7015,7 @@ class BridgeSupportTest {
             btcBlockStore,
             provider,
             storedBlock,
-            activationsAfterForks
+            allActivations
         );
 
         when(storedBlock.getHeight()).thenReturn(10, 5000, 10);
@@ -7260,7 +7044,7 @@ class BridgeSupportTest {
                 repository,
                 contractAddress,
                 bridgeConstantsRegtest.getBtcParams(),
-                activationsAfterForks
+                allActivations
             )
         );
 
@@ -7269,7 +7053,7 @@ class BridgeSupportTest {
             btcBlockStore,
             provider,
             storedBlock,
-            activationsAfterForks
+            allActivations
         );
 
         int result = bridgeSupport.receiveHeader(btcBlock);
@@ -7301,15 +7085,14 @@ class BridgeSupportTest {
             Repository repository = createRepository();
             BridgeStorageProvider bridgeStorageProvider = new BridgeStorageProvider(
                 repository,
-                PrecompiledContracts.BRIDGE_ADDR,
+                contractAddress,
                 bridgeTestnetConstants.getBtcParams(),
-                activationsAfterForks
+                allActivations
             );
 
             btcBlockStoreFactory = new RepositoryBtcBlockStoreWithCache.Factory(bridgeTestnetConstants.getBtcParams(), 100, 100);
-            btcBlockStoreWithCache = btcBlockStoreFactory.newInstance(repository, bridgeTestnetConstants, bridgeStorageProvider, activationsAfterForks);
+            btcBlockStoreWithCache = btcBlockStoreFactory.newInstance(repository, bridgeTestnetConstants, bridgeStorageProvider, allActivations);
 
-            Federation activeFederation = P2shErpFederationBuilder.builder().build();
             when(federationSupport.getActiveFederation()).thenReturn(activeFederation);
 
             bridgeSupport = BridgeSupportBuilder.builder()
@@ -7318,7 +7101,7 @@ class BridgeSupportTest {
                 .withRepository(repository)
                 .withBtcBlockStoreFactory(btcBlockStoreFactory)
                 .withExecutionBlock(rskExecutionBlock)
-                .withActivations(activationsAfterForks)
+                .withActivations(allActivations)
                 .withFederationSupport(federationSupport)
                 .build();
         }
@@ -7402,7 +7185,7 @@ class BridgeSupportTest {
             // recreate context pre rskip 434 for mainnet
             BridgeStorageProvider bridgeStorageProviderPreRSKIP434 = new BridgeStorageProvider(
                 repository,
-                PrecompiledContracts.BRIDGE_ADDR,
+                contractAddress,
                 bridgeMainnetConstants.getBtcParams(),
                 activationsPreRSKIP434
             );
@@ -7419,7 +7202,7 @@ class BridgeSupportTest {
             // recreate context post rskip 434 for mainnet
             BridgeStorageProvider bridgeStorageProviderPostRSKIP434 = new BridgeStorageProvider(
                 repository,
-                PrecompiledContracts.BRIDGE_ADDR,
+                contractAddress,
                 bridgeMainnetConstants.getBtcParams(),
                 activationsPostRSKIP434
             );
@@ -7542,7 +7325,7 @@ class BridgeSupportTest {
         void receiveHeader_networkNotMainnet_returnsSuccessfulAndSavesTheBlock(ActivationConfig.ForBlock activations, BridgeConstants bridgeConstants) throws BlockStoreException, IOException {
             BridgeStorageProvider bridgeStorageProvider = new BridgeStorageProvider(
                 repository,
-                PrecompiledContracts.BRIDGE_ADDR,
+                contractAddress,
                 bridgeConstants.getBtcParams(),
                 activations
             );
@@ -7577,7 +7360,7 @@ class BridgeSupportTest {
         void receiveHeaders_networkNotMainnet_savesAllBlocks(ActivationConfig.ForBlock activations, BridgeConstants bridgeConstants) throws BlockStoreException, IOException {
             BridgeStorageProvider bridgeStorageProvider = new BridgeStorageProvider(
                 repository,
-                PrecompiledContracts.BRIDGE_ADDR,
+                contractAddress,
                 bridgeConstants.getBtcParams(),
                 activations
             );
@@ -7706,6 +7489,242 @@ class BridgeSupportTest {
 
         // Check tx was not marked as processed
         assertFalse(provider.getHeightIfBtcTxhashIsAlreadyProcessed(btcTx.getHash()).isPresent());
+    }
+
+    @Nested
+    @TestInstance(TestInstance.Lifecycle.PER_CLASS)
+    @Tag("test release transaction info processing")
+    class ReleaseTransactionInfo {
+        private List<LogInfo> logs;
+
+        @BeforeEach
+        void setUp() {
+            repository = createRepository();
+            federationStorageProvider.setNewFederation(activeFederation);
+            logs = new ArrayList<>();
+
+            Coin feePerKb = Coin.valueOf(10_000L);
+            when(feePerKbSupport.getFeePerKb()).thenReturn(feePerKb);
+        }
+
+        private void setUpWithActivations(ActivationConfig.ForBlock activations) {
+            bridgeStorageProvider = new BridgeStorageProvider(repository, contractAddress, btcMainnetParams, activations);
+            btcBlockStoreFactory =
+                new RepositoryBtcBlockStoreWithCache.Factory(btcMainnetParams, 100, 100);
+
+            BridgeEventLogger bridgeEventLogger = new BridgeEventLoggerImpl(
+                bridgeMainNetConstants,
+                activations,
+                logs
+            );
+
+            // recreate bridge support with real btcLockSenderProvider instead of a mock to be able to parse pegin
+            BtcLockSenderProvider btcLockSenderProvider = new BtcLockSenderProvider();
+            bridgeSupport = bridgeSupportBuilder
+                .withActivations(activations)
+                .withBridgeConstants(bridgeMainNetConstants)
+                .withRepository(repository)
+                .withProvider(bridgeStorageProvider)
+                .withEventLogger(bridgeEventLogger)
+                .withBtcBlockStoreFactory(btcBlockStoreFactory)
+                .withFederationSupport(federationSupport)
+                .withFeePerKbSupport(feePerKbSupport)
+                .withBtcLockSenderProvider(btcLockSenderProvider)
+                .build();
+        }
+
+        private void setUpReleaseRequests(Coin outpointValue1, Coin outpointValue2, Coin outpointValue3) {
+            // save utxos in active federation wallet
+            List<UTXO> activeFederationUTXOs = List.of(
+                BitcoinTestUtils.createUTXO(1, 0, outpointValue1, activeFederation.getAddress()),
+                BitcoinTestUtils.createUTXO(2, 0, outpointValue2, activeFederation.getAddress()),
+                BitcoinTestUtils.createUTXO(3, 0, outpointValue3, activeFederation.getAddress())
+            );
+            bridgeStorageAccessor.saveToRepository(NEW_FEDERATION_BTC_UTXOS_KEY.getKey(), activeFederationUTXOs, BridgeSerializationUtils::serializeUTXOList);
+
+            // save releases in queue
+            Address destinationAddress1 = BitcoinTestUtils.createP2PKHAddress(btcMainnetParams, "firstAddress");
+            Coin requestedValue1 = Coin.valueOf(100_000);
+            Keccak256 rskTxHash1 = RskTestUtils.createHash(1);
+            ReleaseRequestQueue.Entry releaseEntry1 = new ReleaseRequestQueue.Entry(destinationAddress1, requestedValue1, rskTxHash1);
+
+            Address destinationAddress2 = BitcoinTestUtils.createP2PKHAddress(btcMainnetParams, "secondAddress");
+            Coin requestedValue2 = Coin.valueOf(400_000);
+            Keccak256 rskTxHash2 = RskTestUtils.createHash(2);
+            ReleaseRequestQueue.Entry releaseEntry2 = new ReleaseRequestQueue.Entry(destinationAddress2, requestedValue2, rskTxHash2);
+
+            ReleaseRequestQueue releaseRequestQueue = new ReleaseRequestQueue(List.of(releaseEntry1, releaseEntry2));
+            repository.addStorageBytes(contractAddress, RELEASE_REQUEST_QUEUE_WITH_TXHASH.getKey(), BridgeSerializationUtils.serializeReleaseRequestQueueWithTxHash(releaseRequestQueue));
+        }
+
+        @Test
+        void updateCollections_whenReleasesInQueue_beforeRSKIP305_justEmitsPegoutTransactionCreatedEvent() throws IOException {
+            // Arrange
+            Coin outpointValue1 = Coin.valueOf(300_000);
+            Coin outpointValue2 = Coin.valueOf(150_000);
+            Coin outpointValue3 = Coin.valueOf(50_000);
+            setUpReleaseRequests(outpointValue1, outpointValue2, outpointValue3);
+
+            ActivationConfig.ForBlock lovellActivations = ActivationConfigsForTest.lovell700().forBlock(0L);
+            setUpWithActivations(lovellActivations);
+
+            // Act
+            bridgeSupport.updateCollections(tx);
+            bridgeSupport.save();
+
+            // Assert
+            BtcTransaction releaseTransaction = getReleaseFromPegoutsWFC();
+            List<Coin> expectedOutpointsValues = List.of(outpointValue1, outpointValue2, outpointValue3);
+            assertLogPegoutTransactionCreated(logs, releaseTransaction, expectedOutpointsValues);
+            assertReleaseOutpointsValuesWereNotSavedInStorage(releaseTransaction);
+        }
+
+        @Test
+        void updateCollections_whenReleasesInQueue_afterRSKIP305_processReleaseTransactionInfo() throws IOException {
+            // Arrange
+            Coin outpointValue1 = Coin.valueOf(300_000);
+            Coin outpointValue2 = Coin.valueOf(150_000);
+            Coin outpointValue3 = Coin.valueOf(50_000);
+            setUpReleaseRequests(outpointValue1, outpointValue2, outpointValue3);
+
+            setUpWithActivations(allActivations);
+
+            // Act
+            bridgeSupport.updateCollections(tx);
+            bridgeSupport.save();
+
+            // Assert
+            BtcTransaction releaseTransaction = getReleaseFromPegoutsWFC();
+            List<Coin> expectedOutpointsValues = List.of(outpointValue1, outpointValue2, outpointValue3);
+            assertReleaseTransactionInfoWasProcessed(logs, releaseTransaction, expectedOutpointsValues);
+        }
+
+        @Test
+        void registerBtcTransaction_forRefundableLegacyPeginFromMultisig_beforeRSKIP305_justEmitsPegoutTransactionCreatedEvent() throws Exception {
+            // arrange
+            ActivationConfig.ForBlock lovellActivations = ActivationConfigsForTest.lovell700().forBlock(0L);
+            setUpWithActivations(lovellActivations);
+            Coin amountToSend = Coin.COIN;
+            BtcTransaction pegin = arrangeLegacyPeginFromMultiSig(amountToSend, lovellActivations);
+
+            // act
+            bridgeSupport.registerBtcTransaction(
+                tx,
+                pegin.bitcoinSerialize(),
+                pegoutTxIndexActivationHeight,
+                pmtWithTransactions.bitcoinSerialize()
+            );
+            bridgeSupport.save();
+
+            // assert
+            BtcTransaction releaseTransaction = getReleaseFromPegoutsWFC();
+            assertLogPegoutTransactionCreated(logs, releaseTransaction, List.of(amountToSend));
+            assertReleaseOutpointsValuesWereNotSavedInStorage(releaseTransaction);
+        }
+
+        private void assertReleaseOutpointsValuesWereNotSavedInStorage(BtcTransaction releaseTransaction) {
+            byte[] actualReleaseOutpointsValues = repository.getStorageBytes(
+                contractAddress,
+                getStorageKeyForReleaseOutpointsValues(releaseTransaction.getHash())
+            );
+            assertNull(actualReleaseOutpointsValues);
+        }
+
+        @Test
+        void registerBtcTransaction_forRefundableLegacyPeginFromMultisig_afterRSKIP305_processReleaseTransactionsInfo() throws Exception {
+            // arrange
+            setUpWithActivations(allActivations);
+            Coin amountToSend = Coin.COIN;
+            BtcTransaction pegin = arrangeLegacyPeginFromMultiSig(amountToSend, allActivations);
+
+            // act
+            bridgeSupport.registerBtcTransaction(
+                tx,
+                pegin.bitcoinSerialize(),
+                pegoutTxIndexActivationHeight,
+                pmtWithTransactions.bitcoinSerialize()
+            );
+            bridgeSupport.save();
+
+            // assert
+            BtcTransaction releaseTransaction = getReleaseFromPegoutsWFC();
+            assertReleaseTransactionInfoWasProcessed(logs, releaseTransaction, List.of(amountToSend));
+        }
+
+        private BtcTransaction arrangeLegacyPeginFromMultiSig(Coin amountToSend, ActivationConfig.ForBlock activations) throws Exception {
+            BtcTransaction pegin = new BtcTransaction(btcMainnetParams);
+            List<BtcECKey> pubKeys = Arrays.asList(
+                getBtcEcKeyFromSeed("legacy_pegin_p2sh_multisig_key_1"),
+                getBtcEcKeyFromSeed("legacy_pegin_p2sh_multisig_key_2")
+            );
+            Script redeemScript = ScriptBuilder.createRedeemScript(2, pubKeys);
+            Script scriptSig = BitcoinUtils.createBaseP2SHInputScriptThatSpendsFromRedeemScript(redeemScript);
+            pegin.addInput(BitcoinTestUtils.createHash(1), 0, scriptSig);
+            pegin.addOutput(amountToSend, activeFederation.getAddress());
+
+            setUpForTransactionRegistration(pegin, activations);
+
+            return pegin;
+        }
+
+        private BtcTransaction getReleaseFromPegoutsWFC() throws IOException {
+            PegoutsWaitingForConfirmations pegoutsWFC = bridgeStorageProvider.getPegoutsWaitingForConfirmations();
+            Set<PegoutsWaitingForConfirmations.Entry> pegoutsWFCEntries = pegoutsWFC.getEntries();
+            assertEquals(1, pegoutsWFCEntries.size());
+            // we now know that the only present release is the expected one
+            Iterator<PegoutsWaitingForConfirmations.Entry> iterator = pegoutsWFCEntries.iterator();
+            PegoutsWaitingForConfirmations.Entry pegoutEntry = iterator.next();
+
+            return pegoutEntry.getBtcTransaction();
+        }
+
+        private void assertReleaseTransactionInfoWasProcessed(
+            List<LogInfo> logs,
+            BtcTransaction releaseTransaction,
+            List<Coin> expectedOutpointsValues
+        ) {
+            assertLogPegoutTransactionCreated(logs, releaseTransaction, expectedOutpointsValues);
+            assertReleaseOutpointsValuesWereSaved(releaseTransaction, expectedOutpointsValues);
+        }
+
+        private void assertLogPegoutTransactionCreated(List<LogInfo> logs, BtcTransaction releaseTransaction, List<Coin> expectedOutpointsValues) {
+            CallTransaction.Function pegoutTransactionCreatedEvent = BridgeEvents.PEGOUT_TRANSACTION_CREATED.getEvent();
+            Sha256Hash pegoutTransactionHash = releaseTransaction.getHash();
+            byte[] pegoutTransactionHashSerialized = pegoutTransactionHash.getBytes();
+            List<DataWord> encodedTopics = getEncodedTopics(pegoutTransactionCreatedEvent, pegoutTransactionHashSerialized);
+
+            byte[] serializedOutpointValues = UtxoUtils.encodeOutpointValues(expectedOutpointsValues);
+            byte[] encodedData = getEncodedData(pegoutTransactionCreatedEvent, serializedOutpointValues);
+
+            assertEventWasEmittedWithExpectedTopics(logs, encodedTopics);
+            assertEventWasEmittedWithExpectedData(logs, encodedData);
+        }
+
+        private void assertReleaseOutpointsValuesWereSaved(BtcTransaction releaseTransaction, List<Coin> expectedOutpointsValues) {
+            Optional<List<Coin>> releaseOutpointsValues = bridgeStorageProvider.getReleaseOutpointsValues(releaseTransaction.getHash());
+
+            assertTrue(releaseOutpointsValues.isPresent());
+            assertEquals(expectedOutpointsValues, releaseOutpointsValues.get());
+        }
+    }
+
+    private void setUpForTransactionRegistration(BtcTransaction btcTx, ActivationConfig.ForBlock activations) throws Exception {
+        pmtWithTransactions = createValidPmtForTransactions(List.of(btcTx), btcMainnetParams);
+        var chainHeight = pegoutTxIndexActivationHeight + bridgeMainNetConstants.getBtc2RskMinimumAcceptableConfirmations();
+
+        BtcBlockStoreWithCache btcBlockStore = btcBlockStoreFactory.newInstance(repository, bridgeMainNetConstants, bridgeStorageProvider, activations);
+        recreateChainFromPmt(btcBlockStore, chainHeight, pmtWithTransactions, pegoutTxIndexActivationHeight, btcMainnetParams);
+        bridgeStorageProvider.save();
+    }
+
+    private void assertEventWasEmittedWithExpectedTopics(List<LogInfo> logs, List<DataWord> expectedTopics) {
+        Optional<LogInfo> topicOpt = getLogsTopics(logs, expectedTopics);
+        assertTrue(topicOpt.isPresent());
+    }
+
+    private void assertEventWasEmittedWithExpectedData(List<LogInfo> logs, byte[] expectedData) {
+        Optional<LogInfo> data = getLogsData(logs, expectedData);
+        assertTrue(data.isPresent());
     }
 
     @Test
@@ -8282,7 +8301,7 @@ class BridgeSupportTest {
 
         BridgeStorageProvider provider = new BridgeStorageProvider(
             repository,
-            PrecompiledContracts.BRIDGE_ADDR,
+            contractAddress,
             bridgeConstants.getBtcParams(),
             activations
         );
@@ -8328,7 +8347,7 @@ class BridgeSupportTest {
         }
         // Fund bridge in RBTC, substracting the funds that we are indicating were locked in the federations (which means a user locked)
         co.rsk.core.Coin bridgeBalance = LIMIT_MONETARY_BASE.subtract(co.rsk.core.Coin.fromBitcoin(currentFunds));
-        repository.addBalance(PrecompiledContracts.BRIDGE_ADDR, bridgeBalance);
+        repository.addBalance(contractAddress, bridgeBalance);
 
         // The locking cap shouldn't be surpassed by the initial configuration
         assertFalse(isLockingCapEnabled && currentFunds.isGreaterThan(lockingCap));
@@ -8446,7 +8465,7 @@ class BridgeSupportTest {
 
         // Verify amount was locked
         assertEquals(totalAmountExpectedToHaveBeenLocked, repository.getBalance(srcKeyRskAddress));
-        assertEquals(bridgeBalance.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(PrecompiledContracts.BRIDGE_ADDR));
+        assertEquals(bridgeBalance.subtract(totalAmountExpectedToHaveBeenLocked), repository.getBalance(contractAddress));
 
         if (!shouldLock) {
             // Release tx should have been created directly to the signatures stack
